# boomerang

./: .gitignore  Doxyfile  Doxyfile.in  LICENSE.TERMS  Makefile.am  Makefile.in  README  aclocal.m4  boomerang.cpp  configure  configure.ac  dbl_shared.cpp  driver.cpp  functest.sh  log.cpp  testAll.cpp  testOne.sh  testPent  testSparc
c/: CTest.cpp  CTest.h  Makefile.am  Makefile.in  ansi-c-parser.y  ansi-c-scanner.l  testC.cc
codegen/: Makefile.am  Makefile.in  chllcode.cpp  chllcode.h  syntax.cpp
db/: CfgTest.cpp  CfgTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cpp  ExpTest.h  Makefile.am  Makefile.in  ParserTest.cpp  ParserTest.h  ProcTest.cpp  ProcTest.h  ProgTest.cpp  ProgTest.h  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  basicblock.cpp  cfg.cpp  checkstrings.cpp  dataflow.cpp  exp.cpp  insnameelem.cpp  insnameelem.h  managed.cpp  operstrings.h  proc.cpp  prog.cpp  register.cpp  rtl.cpp  signature.cpp  signatureStubs.cpp  sslinst.cpp  sslparser.y  sslscanner.l  statement.cpp  table.cpp  table.h  testDbase.cpp  (+10 more)
frontend/: FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cpp  FrontSparcTest.h  FrontendTest.cpp  FrontendTest.h  Makefile.am  Makefile.in  frontend.cpp  mipsdecoder.cpp  mipsdecoder.h  mipsfrontend.cpp  mipsfrontend.h  njmcDecoder.cpp  pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h  sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h  st20decoder.cpp  st20decoder.h  st20frontend.cpp  st20frontend.h  testFront.cpp
frontend/machine/arm/: arm.pal  arm.pat
frontend/machine/hppa/: dec  decoder.cpp  decoder.m  decoder_low.cpp  decoder_low.m  disassembler.2.m  disassembler.cpp  disassembler.m  fronthppa.cpp  hppa.2.spec  hppa.pal  hppa.pal.std  hppa.pat  hppa.spec  hppa.ssl  hppa2.spec
frontend/machine/mc68k/: decoder.cpp  decoder.m  decoder_low.cpp  decoder_low.m  front68k.cpp  mc68000.spec  mc68k.pal  mc68k.pat  mc68k.ssl
frontend/machine/mips/: decoder.m  dis.spec  disassembler.cpp  disassembler.m  mips.ssl
frontend/machine/pentium/: 386-core.spec.sav  386-names.spec  core.spec  decoder.m  pentium.ssl
frontend/machine/ppc/: core.spec  decoder.m  ppc.ssl
frontend/machine/sparc/: core.spec  decoder.m  dis.spec  disassembler.cpp  disassembler.m  sparc.pal  sparc.pat  sparc.ssl
frontend/machine/st20/: core.spec  decoder.m
include/: BinaryFile.h  BinaryFileStub.h  basicblock.h  boomerang.h  cfg.h  cluster.h  common.hs  config.h.in  constraint.h  dataflow.h  decoder.h  exp.h  exphelp.h  frontend.h  hllcode.h  log.h  managed.h  memo.h  operator.h  proc.h  prog.h  register.h  rtl.h  sigenum.h  signature.h  statement.h  transformer.h  type.h  types.h  util.h  visitor.h  xmlprogparser.h
loader/: ArchiveFile.cpp  BinaryFile.cpp  BinaryFileFactory.cpp  BinaryFileStub.cpp  DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfArchiveFile.cpp  ElfBinaryFile.cpp  ElfBinaryFile.h  ExeBinaryFile.cpp  ExeBinaryFile.h  HpSomBinaryFile.cpp  HpSomBinaryFile.h  IntelCoffFile.cpp  IntelCoffFile.h  LoaderTest.cpp  LoaderTest.h  MachOBinaryFile.cpp  MachOBinaryFile.h  Makefile.am  Makefile.in  PalmBinaryFile.cpp  PalmBinaryFile.h  SymTab.cpp  SymTab.h  Win32BinaryFile.cpp  Win32BinaryFile.h  bffDump.cpp  microX86dis.c  nlist.h  palmsystraps.h  syself.h  testLoader.cpp
qtgui2/: DecompilerThread.cpp  DecompilerThread.h  Makefile.am  Makefile.in  about.ui  boomerang.qrc  boomerang.ui  main.cpp  mainwindow.cpp  mainwindow.h  mypthread.cpp  qtgui2-mingw.pro  qtgui2-unx.pro  qtgui2.pro  rtleditor.cpp  rtleditor.h
signatures/: Makefile.am  Makefile.in  ctype.h  gcc_pent.h  getopt.h  gl.h  mfc.h  netdb.h  ntddk.h  ntifs.h  pwd.h  socket.h  stat_pent.h  stat_sparc.h  stdio.h  stdlib.h  string.h  termios.h  time.h  utmp.h  windows.h  xf86.h
test/source/: condcodexform.c  minmax.c  minmax2.c  switch.c
transform/: Makefile.am  Makefile.in  generic.cpp  generic.h  rdi.cpp  rdi.h  transformation-parser.y  transformation-scanner.l  transformer.cpp
transformations/: Makefile.am  Makefile.in  struct_member.t
type/: Makefile.am  Makefile.in  TypeTest.cpp  TypeTest.h  constraint.cpp  dfa.cpp  type.cpp
util/: Makefile.am  Makefile.in  UtilTest.cpp  UtilTest.h  testUtil.cpp  util.cpp
