signaturesdir = \
	$(pkgdatadir)/signatures

signatures_DATA = \
	common.hs \
		stdio.h \
		glu.h \
		glut.h \
		gl.h \
		gcc3.h \
		gcc2.9.h \
		math.h \
		stdlib.h \
		string.h \
		locale.h \
		libintl.h \
		unistd.h \
		getopt.h \
		xf86.h \
		pwd.h \
		utmp.h \
		time.h \
		fcntl.h \
		signal.h \
		netdb.h \
		socket.h \
		termios.h \
		ctype.h \
	pentium.hs \
		gcc_pent.h \
		stat_pent.h \
		uname_pent.h \
	ppc.hs \
		stat_ppc.h \
	sparc.hs \
		sunCC.h \
		stat_sparc.h \
	win32.hs \
		windows.h \
		mfc.h \
		ntddk.h \
		ntifs.h
